[package]
name = "labybel"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.117"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
